--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body {
   min-width: 1024px;
   margin-left: auto;
   margin-right: auto;
+  box-sizing: border-box;
 }
 ol, ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -49,6 +50,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   padding: 10px;
   text-align: center;
   text-transform: uppercase;
+  box-sizing: border-box;
 }
 /* ====================== Header ====================== */
 header {
@@ -77,6 +79,7 @@ header h1 a {
     font-size: 12px;
     margin: 50px 0px 0px 0px;
     width: 100%;
+    box-sizing: border-box;
 }
 
 /* Display list items side by side */
